all books routes working as expected
